# soundfx

./: LICENSE  README.md  backup.bat  build.debug  build.release  buildgedlookups.pl  buildgedlookups.sh  codedb-global.sh  codedb-local.sh  grep_1.result  grep_1.sh  scancalls.pl  scanfuncs.pl  setprot
SFX-Doc/eng/: Makefile  Makefile.am  Makefile.in  index.txt  node00.01.__.html  node00.01.__.m4  node00.02.__.html  node00.02.__.m4  node00.03.__.html  node00.03.__.m4  node00.04.__.html  node00.04.__.m4  node00.05.__.html  node00.05.__.m4  node00.06.__.html  node00.06.__.m4  node00.__.__.html  node00.__.__.m4  node01.01.__.html  node01.01.__.m4  node01.02.01.html  node01.02.01.m4  node01.02.02.html  node01.02.02.m4  node01.02.__.html  node01.02.__.m4  node01.03.01.html  node01.03.01.m4  node01.03.02.html  node01.03.02.m4  node01.03.03.html  node01.03.03.m4  node01.03.04.html  node01.03.04.m4  node01.03.05.html  node01.03.05.m4  node01.03.06.html  node01.03.06.m4  node01.03.07.html  node01.03.07.m4  (+257 more)
SFX-Doc/eng/node02.01.06/: Amplify.html  Amplify.m4  AmplifySplit.html  AmplifySplit.m4  Analyse-Data.html  Analyse-Data.m4  Analyse-Spect2D.html  Analyse-Spect2D.m4  Analyse-Spect3D.html  Analyse-Spect3D.m4  Analyse-Stereo.html  Analyse-Stereo.m4  ChannelJoin.html  ChannelJoin.m4  ChannelSplit.html  ChannelSplit.m4  ChorusPhaser.html  ChorusPhaser.m4  ConvertChannels.html  ConvertChannels.m4  Convolve.html  Convolve.m4  Crackle.html  Crackle.m4  CrossTalk.html  CrossTalk.m4  DeCrackle.html  DeCrackle.m4  DeNoise-FFT.html  DeNoise-FFT.m4  DeNoise-FIR.html  DeNoise-FIR.m4  Delay.html  Delay.m4  DelayPlus.html  DelayPlus.m4  Detune.html  Detune.m4  Distortion.html  Distortion.m4  (+98 more)
SFX-Doc/eng/node02.02.01/: CDDA-Direct_L.html  CDDA-Direct_L.m4  Clipboard_L.html  Clipboard_L.m4  DataTypes_L.html  DataTypes_L.m4  FutureSound_L.html  FutureSound_L.m4  IFF-16SV_L.html  IFF-16SV_L.m4  IFF-8SVX_L.html  IFF-8SVX_L.m4  IFF-AIFC_L.html  IFF-AIFC_L.m4  IFF-AIFF_L.html  IFF-AIFF_L.m4  IFF-MAUD_L.html  IFF-MAUD_L.m4  MPEG_L.html  MPEG_L.m4  Maestro_L.html  Maestro_L.m4  RAW_L.html  RAW_L.m4  RIFF-WAV_L.html  RIFF-WAV_L.m4  SDS-File_L.html  SDS-File_L.m4  SND-AU_L.html  SND-AU_L.m4  Studio16_L.html  Studio16_L.m4  TX16W_L.html  TX16W_L.m4  Universal_L.html  Universal_L.m4  VOC_L.html  VOC_L.m4
SFX-Doc/eng/node02.03.01/: Ahi.html  Ahi.m4  Amiga-14bit.html  Amiga-14bit.m4  Amiga-14cbit.html  Amiga-14cbit.m4  Amiga-8bit.html  Amiga-8bit.m4
SFX-Doc/eng/node02.05.01/: Clipboard_S.html  Clipboard_S.m4  FutureSound_S.html  FutureSound_S.m4  IFF-16SV_S.html  IFF-16SV_S.m4  IFF-8SVX_S.html  IFF-8SVX_S.m4  IFF-AIFC_S.html  IFF-AIFC_S.m4  IFF-AIFF_S.html  IFF-AIFF_S.m4  IFF-MAUD_S.html  IFF-MAUD_S.m4  MPEG_S.html  MPEG_S.m4  RAW_S.html  RAW_S.m4  RIFF-WAV_S.html  RIFF-WAV_S.m4  SDS-File_S.html  SDS-File_S.m4  SND-AU_S.html  SND-AU_S.m4  Studio16_S.html  Studio16_S.m4  TX16W_S.html  TX16W_S.m4  VOC_S.html  VOC_S.m4
SFX-Doc/ger/: Makefile  Makefile.am  Makefile.in  index.txt  node00.01.__.m4  node00.02.__.html  node00.02.__.m4  node00.03.__.m4  node00.04.__.m4  node00.05.__.m4  node00.06.__.html  node00.06.__.m4  node00.__.__.m4  node01.01.__.m4  node01.02.01.html  node01.02.01.m4  node01.02.02.html  node01.02.02.m4  node01.02.__.m4  node01.03.01.m4  node01.03.02.html  node01.03.02.m4  node01.03.03.m4  node01.03.04.m4  node01.03.05.m4  node01.03.06.html  node01.03.06.m4  node01.03.07.html  node01.03.07.m4  node01.03.08.html  node01.03.08.m4  node01.03.09.html  node01.03.09.m4  node01.03.10.m4  node01.03.__.m4  node01.04.__.m4  node01.05.01.m4  node01.05.02.m4  node01.05.03.html  node01.05.03.m4  (+216 more)
SFX-Doc/ger/node02.01.06/: Amplify.html  Amplify.m4  AmplifySplit.html  AmplifySplit.m4  Analyse-Data.html  Analyse-Data.m4  Analyse-Spect2D.html  Analyse-Spect2D.m4  Analyse-Spect3D.html  Analyse-Spect3D.m4  Analyse-Stereo.m4  ChannelJoin.html  ChannelJoin.m4  ChannelSplit.html  ChannelSplit.m4  ChorusPhaser.html  ChorusPhaser.m4  ConvertChannels.html  ConvertChannels.m4  Convolve.html  Convolve.m4  Crackle.html  Crackle.m4  CrossTalk.html  CrossTalk.m4  DeCrackle.m4  DeNoise-FFT.html  DeNoise-FFT.m4  DeNoise-FIR.m4  Delay.m4  DelayPlus.html  DelayPlus.m4  Detune.m4  Distortion.html  Distortion.m4  Duplicate.html  Duplicate.m4  Dynamic.html  Dynamic.m4  Echo.m4  (+67 more)
SFX-Doc/ger/node02.02.01/: CDDA-Direct_L.html  CDDA-Direct_L.m4  Clipboard_L.html  Clipboard_L.m4  DataTypes_L.m4  FutureSound_L.m4  IFF-16SV_L.m4  IFF-8SVX_L.m4  IFF-AIFC_L.html  IFF-AIFC_L.m4  IFF-AIFF_L.m4  IFF-MAUD_L.html  IFF-MAUD_L.m4  MPEG_L.m4  Maestro_L.html  Maestro_L.m4  RAW_L.html  RAW_L.m4  RIFF-WAV_L.m4  SDS-File_L.html  SDS-File_L.m4  SND-AU_L.m4  Studio16_L.html  Studio16_L.m4  TX16W_L.html  TX16W_L.m4  Universal_L.html  Universal_L.m4  VOC_L.m4
SFX-Doc/ger/node02.03.01/: Ahi.html  Ahi.m4  Amiga-14bit.m4  Amiga-14cbit.m4  Amiga-8bit.html  Amiga-8bit.m4
SFX-Doc/ger/node02.05.01/: Clipboard_S.m4  (+20 more)
(+3028 files in other folders)
